Tasneem Sherif Tawfik Ali Yousif/K8S_2_task/K8S/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
