Tasneem Sherif Tawfik Ali Yousif/K8S_2_task/K8S/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: frontend-content
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        resources:
          limits:
            cpu: "500m"
            memory: "500Mi"
      volumes:
      - name: frontend-content
        configMap:
          name: frontend-config
