Tasneem Sherif Tawfik Ali Yousif/K8S_2_task/K8S/order-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: hashicorp/http-echo
        args:
          - "-text=Order Service Connected to Product + DB"
        resources:
          limits:
            cpu: "500m"
            memory: "500Mi"
