Tasneem Sherif Tawfik Ali Yousif/K8S_2_task/K8S/product-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: hashicorp/http-echo
        args:
          - "-text=Product Service Connected to DB"
        resources:
          limits:
            cpu: "500m"
            memory: "500Mi"
