Tasneem Sherif Tawfik Ali Yousif/K8S_2_task/K8S/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
