Tasneem Sherif Tawfik Ali Yousif/K8S_2_task/K8S/order-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  ports:
    - port: 80
      targetPort: 5678
  type: ClusterIP
