Tasneem Sherif Tawfik Ali Yousif/K8S_2_task/K8S/product-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product
  ports:
    - port: 80
      targetPort: 5678
  type: ClusterIP
