Tasneem Sherif Tawfik Ali Yousif/K8S_2_task/K8S/np-frontend-to-order.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-order
spec:
  podSelector:
    matchLabels:
      app: order
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
