Tasneem Sherif Tawfik Ali Yousif/K8S_2_task/K8S/np-product-order-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-product-order-to-db
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: product
    - podSelector:
        matchLabels:
          app: order
